chore: issue squashing

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -98,6 +98,9 @@ input, textarea {
 .mb-18 {
   margin-bottom: 18px;
 }
+.mb-54 {
+  margin-bottom: 54px;
+}
 .mt-9 {
   margin-top: 9px;
 }
@@ -109,6 +112,9 @@ input, textarea {
 }
 .mr-9 {
   margin-right: 9px;
+}
+.mr-18 {
+  margin-right: 18px;
 }
 .mr-a {
   margin-right: auto;
@@ -142,6 +148,9 @@ input, textarea {
 }
 .fs-24 {
   font-size: 20px;
+}
+.wfc {
+  width: fit-content;
 }
 .w100 {
   width: 100%;
